# mcp-mcp

./: .dockerignore  .gitignore  Directory.Build.props  Directory.Packages.props  Dockerfile  LICENSE  MCPMCP.slnx  README.md  SECURITY.md  docker-compose.postgres.yml  docker-compose.yml  global.json  nuget.config
.github/workflows/: ci.yml
docs/: gateway-cli.md  operations.md
docs/SkillUsed/: adr-writer.md  plan-builder.md  prd-writer.md
docs/acceptance/: performance.md  v1.2.md  v1.md
docs/adr/: 0001-zentraler-proxy-gateway-statt-direktanbindung.md  0002-dotnet-mit-offiziellem-csharp-mcp-sdk.md  0003-hybride-token-strategie-lazy-discovery-plus-profile.md  0004-blazor-server-als-web-ui.md  0005-hot-swap-upstreams-als-verwaltete-kindprozesse.md  0006-rollenbasiertes-rbac-mit-default-deny.md  0007-ef-core-mit-sqlite-default-postgres-optional.md  0008-api-mcp-bridge-als-erstklassige-fassaden.md  0009-sse-legacy-transport.md  0010-sampling-elicitation-nicht-durchreichen.md  0011-secret-erkennung-als-guardrail.md  0012-approval-flows-asynchron.md  0013-webhook-trigger.md  0014-cli-programme-als-upstream-transport.md  0015-protokollneutrales-capability-modell.md  README.md  (+5 more)
spikes/wasi-component-runtime/: Cargo.toml
spikes/wasi-component-runtime/fixtures/: denied-import.component.wat  infinite.component.wat  memory-growth.component.wat  no-import.component.wat  wasi-p2-guest.component.wasm
spikes/wasi-component-runtime/guest/: Cargo.toml
spikes/wasi-component-runtime/guest/src/: main.rs
spikes/wasi-component-runtime/src/: host.rs  lib.rs  main.rs
(+234 files in other folders)
